argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    # Traefik Entrypoints & Protocolo
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
    
    # Fintech Security: Rate Limiting (Proteção básica contra força bruta no painel)
    traefik.ingress.kubernetes.io/router.middlewares: argocd-fintech-protection@kubernetescrd    
   
    # Buffering para gRPC não dropar a conexão durante o deploy
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  rules:
  - host: argocd.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
